feat: auth pages

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -12,7 +12,11 @@ $grey_f0:#f0f0f0;
 $green_00:#007b85;
 $gold_d9:#d9811f;
 $grey_c6:#c6c5c5;
+$grey_c8:#c8c8c8;
 $grey_80:#808080;
+$grey_4a:#A4A2A2;
 $grey_97:#979797;
+
+$facebook:#3b5898;
 
 $placeholder-text-color : #424242;
