feat: reset pages & modals

--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -43,7 +43,7 @@ footer
                 {
                     width: calc(75% - 17px);
                     border: 1px solid $grey_c6;
-                    color: $grey_c6;
+                    color: $black_4a;
                     background: transparent;
                     @include font-details(12px, 'OpenSans', 400);
                     padding: 8px 10px 6px;
