--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -4,19 +4,29 @@ $images_path: "../img/" !default;
 $black_33 : #333333;
 $black_4a:#4a4a4a;
 $black_28:#282828;
+$black_2a:#2a2828;
+
 $red_fa:#fa5a60;
 $red_d6:#d66573;
-$black_2a:#2a2828;
-$grey_9b:#9b9b9b;
-$grey_f0:#f0f0f0;
+
 $green_00:#007b85;
 $gold_d9:#d9811f;
+
+
+$grey_9b:#9b9b9b;
+$grey_f0:#f0f0f0;
 $grey_c6:#c6c5c5;
 $grey_c8:#c8c8c8;
 $grey_80:#808080;
 $grey_4a:#A4A2A2;
 $grey_97:#979797;
+$grey_f7:#f7f7f7;
 
 $facebook:#3b5898;
 
 $placeholder-text-color : #424242;
+
+$google_green: #008744;
+$google_blue: #0057e7;
+$google_red: #d62d20;
+$google_yellow: #ffa700;
