feat: create pages for women,men ,kids, boutiques, look book, start boutique description page

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -19,6 +19,7 @@ $grey_c6:#c6c5c5;
 $grey_c8:#c8c8c8;
 $grey_80:#808080;
 $grey_4a:#A4A2A2;
+$grey_df:#dfdfdf;
 $grey_97:#979797;
 $grey_f7:#f7f7f7;
 
